--- a/src/client/styles/_theme.scss
+++ b/src/client/styles/_theme.scss
@@ -117,3 +117,104 @@ h4 {
 	padding-left: 2em;
 	width: calc(100% - 200px - 2em);
 }
+
+.bottomMenuWrap {
+	display: flex;
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	margin-left: -$base-horizontal-padding;
+	flex-wrap: nowrap;
+	align-items: center;
+	justify-content: space-between;
+	background: $dark-gray-100;
+}
+
+.bottomMenuItem {
+	padding: $form-margin-vertical 3 * $form-margin-vertical;
+
+	& i {
+		margin-right: 1em;
+	}
+}
+
+.modal {
+	position: fixed;
+	overflow: hidden;
+	z-index: 999999;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	background-color: $dark-gray-75;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 1.5em 1em;
+	box-sizing: border-box;
+
+	&.modalFade {
+		animation: fade-in 1s 1 linear;
+		animation-fill-mode: forwards;
+		opacity: 0;
+	}
+
+	& > .modalOverlay {
+		width: 100%;
+		height: 100%;
+		position: absolute;
+		top: 0;
+		left: 0;
+	}
+
+	& > .modalBody {
+		position: relative;
+		z-index: 2;
+		margin: 0 auto;
+		background-color: $dark-gray-100;
+		border: $base-content-block-border;
+		overflow-x: hidden;
+		overflow-y: auto;
+		max-height: 100%;
+		padding: $base-vertical-padding $base-horizontal-padding;
+		color: $white-100;
+	}
+
+	& > .modalClose {
+		position: absolute;
+		z-index: 999999;
+		top: 10px;
+		right: 15px;
+		color: $white-100;
+		cursor: pointer;
+		font-size: 1.25em;
+		padding: 7px;
+		background: $dark-gray-75;
+		border: $base-content-block-border;
+		border-radius: 50%;
+		width: 42px;
+		height: 42px;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		box-sizing: border-box;
+		text-align: center;
+
+		&:hover {
+			background: $accent-60;
+		}
+	}
+}
+
+@keyframes fade-in {
+	0% {
+		animation-timing-function: cubic-bezier(0.2242, 0.7499, 0.3142, 0.8148);
+		opacity: 0;
+	}
+
+	100% {
+		opacity: 1;
+	}
+}
