--- a/src/client/styles/pages/_forum.scss
+++ b/src/client/styles/pages/_forum.scss
@@ -4,7 +4,7 @@
 	border-spacing: 15px 30px;
 
 	& tr > td {
-		padding: $base-vertical-padding / 2 $base-horizontal-padding / 2;
+		padding: calc(#{$base-vertical-padding} / 2) calc(#{$base-horizontal-padding} / 2);
 		background: $white-100;
 		color: $dark-gray-100;
 	}
